--- a/ChinookDemo/ChinookSystem/ChinookSystem.csproj
+++ b/ChinookDemo/ChinookSystem/ChinookSystem.csproj
@@ -52,8 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\dummy.cs" />
-    <Compile Include="DAL\dummy.cs" />
-    <Compile Include="Entities\dummy.cs" />
+    <Compile Include="DAL\ChinookSystemContext.cs" />
+    <Compile Include="Entities\Album.cs" />
+    <Compile Include="Entities\Artist.cs" />
+    <Compile Include="Entities\MediaType.cs" />
+    <Compile Include="Entities\Track.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\dummy.cs" />
   </ItemGroup>
@@ -61,6 +64,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
