--- a/ChinookDemo/WebApp/WebApp.csproj
+++ b/ChinookDemo/WebApp/WebApp.csproj
@@ -190,6 +190,7 @@
     <Content Include="Global.asax" />
     <Content Include="Account\Web.config" />
     <Content Include="SamplePages\GridViewODS.aspx" />
+    <Content Include="SamplePages\LinqPad2AppQuery.aspx" />
     <Content Include="SamplePages\ListViewODSCRUD.aspx" />
     <Content Include="SamplePages\SearchByDDL.aspx" />
     <Content Include="SamplePages\TestPage.aspx" />
@@ -474,6 +475,13 @@
     </Compile>
     <Compile Include="SamplePages\GridViewODS.aspx.designer.cs">
       <DependentUpon>GridViewODS.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SamplePages\LinqPad2AppQuery.aspx.cs">
+      <DependentUpon>LinqPad2AppQuery.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SamplePages\LinqPad2AppQuery.aspx.designer.cs">
+      <DependentUpon>LinqPad2AppQuery.aspx</DependentUpon>
     </Compile>
     <Compile Include="SamplePages\ListViewODSCRUD.aspx.cs">
       <DependentUpon>ListViewODSCRUD.aspx</DependentUpon>
