--- a/ChinookDemo/ChinookSystem/ChinookSystem.csproj
+++ b/ChinookDemo/ChinookSystem/ChinookSystem.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BLL\AlbumController.cs" />
     <Compile Include="BLL\ArtistController.cs" />
     <Compile Include="BLL\BusinessRuleException.cs" />
+    <Compile Include="BLL\TrackController.cs" />
     <Compile Include="Entities\Album.cs" />
     <Compile Include="Entities\Artist.cs" />
     <Compile Include="DAL\ChinookSystemContext.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AlbumArtist.cs" />
     <Compile Include="ViewModels\AlbumList.cs" />
+    <Compile Include="ViewModels\AlbumTrack.cs" />
     <Compile Include="ViewModels\SelectionList.cs" />
   </ItemGroup>
   <ItemGroup>
