--- a/ChinookDemo/ChinookSystem/ChinookSystem.csproj
+++ b/ChinookDemo/ChinookSystem/ChinookSystem.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BLL\AlbumController.cs" />
     <Compile Include="BLL\ArtistController.cs" />
     <Compile Include="BLL\BusinessRuleException.cs" />
+    <Compile Include="BLL\PlaylistController.cs" />
     <Compile Include="BLL\TrackController.cs" />
     <Compile Include="Entities\Album.cs" />
     <Compile Include="Entities\Artist.cs" />
@@ -74,6 +75,8 @@
     <Compile Include="ViewModels\AlbumArtist.cs" />
     <Compile Include="ViewModels\AlbumList.cs" />
     <Compile Include="ViewModels\AlbumTrack.cs" />
+    <Compile Include="ViewModels\PlaylistItem.cs" />
+    <Compile Include="ViewModels\PlaylistSong.cs" />
     <Compile Include="ViewModels\SelectionList.cs" />
   </ItemGroup>
   <ItemGroup>
