--- a/ChinookDemo/WebApp/WebApp.csproj
+++ b/ChinookDemo/WebApp/WebApp.csproj
@@ -192,6 +192,7 @@
     <Content Include="SamplePages\GridViewODS.aspx" />
     <Content Include="SamplePages\LinqPad2AppQuery.aspx" />
     <Content Include="SamplePages\ListViewODSCRUD.aspx" />
+    <Content Include="SamplePages\ODSRepeater.aspx" />
     <Content Include="SamplePages\SearchByDDL.aspx" />
     <Content Include="SamplePages\TestPage.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -489,6 +490,13 @@
     </Compile>
     <Compile Include="SamplePages\ListViewODSCRUD.aspx.designer.cs">
       <DependentUpon>ListViewODSCRUD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SamplePages\ODSRepeater.aspx.cs">
+      <DependentUpon>ODSRepeater.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SamplePages\ODSRepeater.aspx.designer.cs">
+      <DependentUpon>ODSRepeater.aspx</DependentUpon>
     </Compile>
     <Compile Include="SamplePages\SearchByDDL.aspx.cs">
       <DependentUpon>SearchByDDL.aspx</DependentUpon>
