--- a/ChinookDemo/ChinookSystem/ChinookSystem.csproj
+++ b/ChinookDemo/ChinookSystem/ChinookSystem.csproj
@@ -56,7 +56,10 @@
     <Compile Include="BLL\AlbumController.cs" />
     <Compile Include="BLL\ArtistController.cs" />
     <Compile Include="BLL\BusinessRuleException.cs" />
+    <Compile Include="BLL\GenreController.cs" />
+    <Compile Include="BLL\MediaTypeController.cs" />
     <Compile Include="BLL\PlaylistController.cs" />
+    <Compile Include="BLL\PlaylistTracksController.cs" />
     <Compile Include="BLL\TrackController.cs" />
     <Compile Include="Entities\Album.cs" />
     <Compile Include="Entities\Artist.cs" />
@@ -78,6 +81,9 @@
     <Compile Include="ViewModels\PlaylistItem.cs" />
     <Compile Include="ViewModels\PlaylistSong.cs" />
     <Compile Include="ViewModels\SelectionList.cs" />
+    <Compile Include="ViewModels\TrackItem.cs" />
+    <Compile Include="ViewModels\TrackList.cs" />
+    <Compile Include="ViewModels\UserPlaylistTrack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
