--- a/ChinookDemo/WebApp/Web.config
+++ b/ChinookDemo/WebApp/Web.config
@@ -103,8 +103,7 @@
   </runtime>
   <entityFramework>
     <contexts>
-      <context disableDatabaseInitialization="true"
-               type="ChinookSystem.DAL.ChinookSystemContext, ChinookSystem">
+      <context disableDatabaseInitialization="true" type="ChinookSystem.DAL.ChinookSystemContext, ChinookSystem">
       </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
