--- a/ChinookDemo/WebApp/packages.config
+++ b/ChinookDemo/WebApp/packages.config
@@ -5,6 +5,8 @@
   <package id="AspNet.ScriptManager.jQuery" version="3.5.1" targetFramework="net472" />
   <package id="bootstrap" version="4.5.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Font.Awesome" version="5.15.1" targetFramework="net472" />
+  <package id="font-awesome" version="4.7.0" targetFramework="net472" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net472" />
