--- a/ChinookDemo/WebApp/Web.config
+++ b/ChinookDemo/WebApp/Web.config
@@ -9,8 +9,8 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings configSource="WebConnectionStrings.config">
-    
   </connectionStrings>
+  <appSettings configSource="AppSettings.config"></appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
