--- a/ChinookDemo/WebApp/WebConnectionStrings.config
+++ b/ChinookDemo/WebApp/WebConnectionStrings.config
@@ -3,6 +3,6 @@
        connectionString="Data Source=.; Initial Catalog=Chinook; Integrated Security=true;" 
        providerName="System.Data.SqlClient"/>
   <add name="DefaultConnection" 
-       connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20200909081531.mdf;Initial Catalog=aspnet-WebApp-20200909081531;Integrated Security=True" 
+       connectionString="Data Source=.;Initial Catalog=Chinook;Integrated Security=True" 
        providerName="System.Data.SqlClient" />
 </connectionStrings>
